base/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-fargate
  template:
    metadata:
      labels:
        app: backend-fargate
    spec:
      containers:
        - name: django-backend
          image: 940168446867.dkr.ecr.eu-west-3.amazonaws.com/basic-django-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
