base/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: django-backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: backend-fargate
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
